// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VehicleMatchBadge > snapshots > renders known vehicle badge correctly 1`] = `
<span
  aria-label="Known vehicle: Silver Tesla Model 3"
  class="inline-flex items-center rounded-full border font-medium bg-green-500/10 text-green-600 dark:text-green-400 border-green-500/30 px-2 py-1 text-sm gap-1.5"
  data-known="true"
  data-testid="vehicle-match-badge"
  role="status"
  title="Silver Tesla Model 3"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-car h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"
    />
    <circle
      cx="7"
      cy="17"
      r="2"
    />
    <path
      d="M9 17h6"
    />
    <circle
      cx="17"
      cy="17"
      r="2"
    />
  </svg>
  <span>
    Known
  </span>
</span>
`;

exports[`VehicleMatchBadge > snapshots > renders small size variant correctly 1`] = `
<span
  aria-label="Known vehicle: Silver Tesla Model 3"
  class="inline-flex items-center rounded-full border font-medium bg-green-500/10 text-green-600 dark:text-green-400 border-green-500/30 px-1.5 py-0.5 text-xs gap-1"
  data-known="true"
  data-testid="vehicle-match-badge"
  role="status"
  title="Silver Tesla Model 3"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-car h-3 w-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"
    />
    <circle
      cx="7"
      cy="17"
      r="2"
    />
    <path
      d="M9 17h6"
    />
    <circle
      cx="17"
      cy="17"
      r="2"
    />
  </svg>
  <span>
    Known
  </span>
</span>
`;

exports[`VehicleMatchBadge > snapshots > renders unknown vehicle badge correctly 1`] = `
<span
  aria-label="Unknown vehicle: UNKNOWN"
  class="inline-flex items-center rounded-full border font-medium bg-amber-500/10 text-amber-600 dark:text-amber-400 border-amber-500/30 px-2 py-1 text-sm gap-1.5"
  data-known="false"
  data-testid="vehicle-match-badge"
  role="status"
  title="Unknown vehicle"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  <span>
    Unknown
  </span>
</span>
`;
